2003-01-21  Ulrich Weigand  <uweigand@de.ibm.com>

	* dwarf2out (output_file_names): Don't crash if called
	with empty file_table.

2003-01-21  Zack Weinberg  <zack@codesourcery.com>

	* genautomata.c (output_internal_insn_latency_func): Add
	missing break statement to generated code.

2003-01-21  Roger Sayle  <roger@eyesopen.com>

	* stmt.c (same_case_target_p): New function to determine whether
	two case labels branch to the same target.  Split out from...
	(group_case_nodes): ... here.  Use same_case_target_p instead.
	(strip_default_case_nodes): Remove explicit case nodes
	that branch to the default destination.
	(expand_end_case_type): Call strip_default_case_nodes after
	group_case_nodes, to simplify the case-list before we count it.
	Only generate table_label RTX when actually needed.  Try to share
	thiscase->exit_label and thiscase->data.case_stmt.default_label
	when a switch has no explicit default case.  Simplify test for
	constant index.

2003-01-21  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.md (*negsf2_h8300): Use \\t instead of
	\t.
	(*negsf2_h8300hs): Likewise.
	(*addsi3_lshiftrt_16_zexthi): Likewise.
	(*iorhi3_lshiftrt_8): Likewise.

2003-01-21  Ulrich Weigand  <uweigand@de.ibm.com>

	* dwarf2out.c (fde_table_in_use): Mark GTY.
	(dwarf2out_cfi_label_num): New variable, marked GTY.
	(dwarf2out_cfi_label): Use it instead of static label_num.
	* emit-rtl.c (label_num): Mark GTY.

2003-01-21  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.c (output_plussi): Support H8/300.
	(compute_plussi_length): Likewise.
	(compute_plussi_cc): Likewise.
	* config/h8300/h8300.md (addsi_h8300): Use output_plussi to
	output assembly instructions.

2003-01-21  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* calls.c (fix_unsafe_tree): Prototype.

	* Makefile.in (GCC_WARN_CFLAGS): Add $(WERROR) $($@-warn)
	(gtype-desc.o-warn, c-decl.o-warn, varasm.o-warn, gcc.o-warn,
	insn-conditions.o-warn, out_object_file, gengtype-yacc.o-warn,