@@ -1355,7 +1355,8 @@ process ()
   process_ct++;
 #endif
   if (VLEVEL( VERB_PROGRESS ) && have_tty)
-    fprintf (stderr, "%6d %-50s   \r", data_map_size, pz_curr_file );
+    fprintf (stderr, "%6lu %-50s   \r",
+	     (unsigned long) data_map_size, pz_curr_file);
 
 # ifndef SEPARATE_FIX_PROC
   process_chain_head = NOPROCESS;
