@@ -58,15 +58,15 @@ typedef struct {
     t_test_proc* test_proc;
 } test_entry_t;
 
-#define FIX_TEST_TABLE \
-  _FT_( "machine_name",     machine_name_test )        \
+#define FIX_TEST_TABLE							\
+  _FT_( "machine_name",     machine_name_test )				\
   _FT_( "stdc_0_in_system_headers",    stdc_0_in_system_headers_test )
 
-#define TEST_FOR_FIX_PROC_HEAD( test )          \
-static apply_fix_p_t test PARAMS(( tCC* file, tCC* text ));  \
-static apply_fix_p_t test ( fname, text )       \
-    tCC* fname;                                 \
-    tCC* text;
+#define TEST_FOR_FIX_PROC_HEAD( test )				\
+static apply_fix_p_t test PARAMS(( tCC* file, tCC* text ));	\
+static apply_fix_p_t test ( fname, text )			\
+    tCC* fname ATTRIBUTE_UNUSED;				\
+    tCC* text ATTRIBUTE_UNUSED;
 
 
 TEST_FOR_FIX_PROC_HEAD( machine_name_test )
